# teilur-assesment

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SCAFFOLDING_COMPLETE.md  docker-compose.yml  pyproject.toml  pytest.ini
docs/: LANGSMITH_INTEGRATION.md  LOCAL_TESTING_GUIDE.md  TESTING_GUIDE.md  architecture.md
notebooks/: demo_deployed_endpoint.ipynb
scripts/: upload_financial_documents.sh
src/application/interfaces/: agent_orchestrator.py
src/application/use_cases/: get_historical_stock_price.py  get_realtime_stock_price.py  query_documents.py
src/di/: container.py
src/domain/entities/: document.py  query_result.py  stock_price.py
src/domain/interfaces/: document_repository.py  llm_service.py  observability_service.py  stock_repository.py
src/infrastructure/agent/: langgraph_orchestrator.py  tools.py
src/infrastructure/aws/: cognito_auth.py
src/infrastructure/logging/: __init__.py  logger.py
src/infrastructure/repositories/: bedrock_document_repository.py  yfinance_stock_repository.py
src/infrastructure/services/: bedrock_llm_service.py  langfuse_observability.py  langsmith_observability.py
src/presentation/api/: main.py
src/presentation/streaming/: event_stream.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/agentcore/: main.tf  outputs.tf  variables.tf
terraform/modules/bedrock/: main.tf  outputs.tf  variables.tf
terraform/modules/cognito/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/integration/: test_agent_end_to_end.py  test_yfinance_repository.py
tests/unit/: test_di_container.py
(+21 files in other folders)
